feat: added tests for post controller, service, repository.
